# grapevine

./: .gitignore  Cargo.toml  README.md  deny.toml  hooks  rustfmt.toml  test_e2e.sh
.github/: CODEOWNERS  dependabot.yaml  settings.yml
.github/workflows/: ci.yaml  pr.yaml  validate-dependabot.yaml
api/: Cargo.toml  README.md  build.rs
api/proto/: bomb.proto  grapevine.proto
api/src/: lib.rs
api/tests/: grapevine_types.rs
client/: Cargo.toml
client/src/: config.rs  main.rs
connection/: Cargo.toml  README.md
connection/src/: error.rs  lib.rs  signer.rs
enclave/: Cargo.toml  build.rs
enclave/api/: Cargo.toml  README.md
enclave/api/src/: lib.rs
enclave/edl/: Cargo.toml  build.rs  enclave.edl
enclave/edl/src/: lib.rs
enclave/impl/: Cargo.toml  README.md
enclave/impl/src/: lib.rs
enclave/impl/src/message_bus/: marshalled_record.rs  mod.rs
enclave/measurement/: Cargo.toml  README.md  build.rs
enclave/measurement/src/: lib.rs
enclave/src/: ecall.rs  lib.rs
enclave/trusted/: Cargo.toml  README.md  build.rs
enclave/trusted/src/: lib.rs
server/: Cargo.toml  README.md
server/src/: bomb_service.rs  config.rs  counters.rs  error.rs  lib.rs  server.rs
tools/: install_git_settings.sh  lint.sh
types/: Cargo.toml  README.md
types/src/: lib.rs
uri/: Cargo.toml  README.md
uri/src/: lib.rs
