[package]
name = "mc-bomb-enclave"
version = "4.0.2"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
rust-version = { workspace = true }

[dependencies]
# mobilecoin
mc-attest-core = { path = "../mobilecoin/attest/core" }
mc-attest-enclave-api = { path = "../mobilecoin/attest/enclave-api" }
mc-attest-verifier = { path = "../mobilecoin/attest/verifier" }
mc-common = { path = "../mobilecoin/common", features = ["log"] }
mc-crypto-keys = { path = "../mobilecoin/crypto/keys" }
mc-enclave-boundary = { path = "../mobilecoin/enclave-boundary" }
mc-fog-ocall-oram-storage-edl = { path = "../mobilecoin/fog/ocall_oram_storage/edl" }
mc-fog-ocall-oram-storage-untrusted = { path = "../mobilecoin/fog/ocall_oram_storage/untrusted" }
mc-sgx-debug-edl = { path = "../mobilecoin/sgx/debug-edl" }
mc-sgx-panic-edl = { path = "../mobilecoin/sgx/panic-edl" }
mc-sgx-report-cache-api = { path = "../mobilecoin/sgx/report-cache/api" }
mc-sgx-slog = { path = "../mobilecoin/sgx/slog" }
mc-sgx-slog-edl = { path = "../mobilecoin/sgx/slog-edl" }
mc-sgx-types = { path = "../mobilecoin/sgx/types" }
mc-sgx-urts = { path = "../mobilecoin/sgx/urts" }
mc-util-serial = { path = "../mobilecoin/util/serial" }

# omb
mc-bomb-enclave-api = { path = "./api" }
mc-bomb-enclave-edl = { path = "./edl" }
mc-bomb-enclave-measurement = { path = "./measurement" }

# third-party
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

[dev-dependencies]
criterion = "0.4"

mc-util-from-random = { path = "../mobilecoin/util/from-random" }

[build-dependencies]
mc-util-build-script = { path = "../mobilecoin/util/build/script" }
mc-util-build-sgx = { path = "../mobilecoin/util/build/sgx" }

cargo-emit = "0.2.1"
pkg-config = "0.3"
