[package]
name = "mc-bomb-server"
version = "4.1.0-pre0"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[lib]
name = "mc_bomb_server"
path = "src/lib.rs"

[[bin]]
name = "mc-bomb-server"
path = "src/bin/main.rs"

[dependencies]
# third party
clap = { version = "4.1", features = ["derive", "env"] }
displaydoc = { version = "0.2", default-features = false }
futures = "0.3"
grpcio = "0.12.1"
lazy_static = "1.4"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0"

# mobilecoin
mc-attest-api = { path = "../mobilecoin/attest/api" }
mc-attest-core = { path = "../mobilecoin/attest/core" }
mc-attest-net = { path = "../mobilecoin/attest/net" }
mc-common = { path = "../mobilecoin/common", features = ["log"] }
mc-crypto-keys = { path = "../mobilecoin/crypto/keys" }
mc-sgx-report-cache-untrusted = { path = "../mobilecoin/sgx/report-cache/untrusted" }
mc-util-cli = { path = "../mobilecoin/util/cli" }
mc-util-from-random = { path = "../mobilecoin/util/from-random" }
mc-util-grpc = { path = "../mobilecoin/util/grpc" }
mc-util-metered-channel = { path = "../mobilecoin/util/metered-channel" }
mc-util-metrics = { path = "../mobilecoin/util/metrics" }
mc-util-parse = { path = "../mobilecoin/util/parse" }
mc-util-serial = { path = "../mobilecoin/util/serial" }
mc-util-telemetry = { path = "../mobilecoin/util/telemetry", features = ["jaeger"] }
mc-util-uri = { path = "../mobilecoin/util/uri" }

# bomb
mc-bomb-api = { path = "../api" }
mc-bomb-enclave = { path = "../enclave" }
mc-bomb-enclave-api = { path = "../enclave/api" }
mc-bomb-types = { path = "../types" }
mc-bomb-uri = { path = "../uri" }

[dev-dependencies]
pem = "1.1"
portpicker = "0.1.1"
rand = "0.8"
rand_core = "0.6"

mc-attest-verifier = { path = "../mobilecoin/attest/verifier" }
mc-common = { path = "../mobilecoin/common", features = ["loggers"] }
mc-util-encodings = { path = "../mobilecoin/util/encodings" }
mc-util-serial = { path = "../mobilecoin/util/serial" }
mc-util-test-helper = { path = "../mobilecoin/util/test-helper" }
mc-util-uri = { path = "../mobilecoin/util/uri" }
