[package]
name = "mc-bomb-types"
version = "4.0.2"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
rust-version = { workspace = true }

[dependencies]
displaydoc = { version = "0.2", default-features = false }
mc-crypto-keys = { path = "../mobilecoin/crypto/keys" }
prost = { version = "0.11", default-features = false, features = ["prost-derive"] }

[dev_dependencies]
# mobilecoin
mc-util-serial = { path = "../mobilecoin/util/serial", default-features = false }
