[package]
name = "mc-grapevine-types"
version = "4.0.2"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
rust-version = { workspace = true }

[features]
default = []
from-random = ["dep:mc-util-from-random"]

[dependencies]
# mobilecoin
mc-util-from-random = { path = "../mobilecoin/util/from-random", optional = true }

# third-party
displaydoc = { version = "0.2", default-features = false }
prost = { version = "0.11", default-features = false, features = ["prost-derive"] }

[dev_dependencies]
# mobilecoin
mc-util-serial = { path = "../mobilecoin/util/serial", default-features = false }
