[package]
name = "mc-bomb-uri"
version = "4.1.0-pre0"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[dependencies]
mc-util-uri = { path = "../mobilecoin/util/uri" }

[dev-dependencies]
mc-common = { path = "../mobilecoin/common" }
