[package]
name = "mc-grapevine-enclave-api"
version = "4.0.2"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
rust-version = { workspace = true }

[dependencies]
# mobilecoin
mc-attest-core = { path = "../../mobilecoin/attest/core", default-features = false }
mc-attest-enclave-api = { path = "../../mobilecoin/attest/enclave-api", default-features = false }
mc-common = { path = "../../mobilecoin/common", default-features = false }
mc-crypto-keys = { path = "../../mobilecoin/crypto/keys", default-features = false }
mc-sgx-compat = { path = "../../mobilecoin/sgx/compat", default-features = false }
mc-sgx-report-cache-api = { path = "../../mobilecoin/sgx/report-cache/api" }
mc-sgx-types = { path = "../../mobilecoin/sgx/types", default-features = false }
mc-util-serial = { path = "../../mobilecoin/util/serial", default-features = false }

# third-party
displaydoc = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false }
