[package]
name = "mc-bomb-enclave-measurement"
version = "4.0.2"
authors = ["MobileCoin"]
description = "MobileCoin BOMB Enclave - Application Code"
edition = "2021"
license = "GPL-3.0"
links = "bomb_enclave_measurement"
rust-version = { workspace = true }

[features]
# Whether the enclave should be built in simulation mode when it needs to be built
sgx-sim = []

[dependencies]
mc-attest-core = { path = "../../mobilecoin/attest/core" }
mc-attest-verifier = { path = "../../mobilecoin/attest/verifier" }
mc-sgx-css = { path = "../../mobilecoin/sgx/css" }

[build-dependencies]
mc-util-build-enclave = { path = "../../mobilecoin/util/build/enclave" }
mc-util-build-script = { path = "../../mobilecoin/util/build/script" }
mc-util-build-sgx = { path = "../../mobilecoin/util/build/sgx" }

cargo-emit = "0.2"
