[package]
name = "mc-bomb-enclave-trusted"
version = "4.0.2"
authors = ["MobileCoin"]
description = "The BOMB enclave entry point."
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = "1.68.0"

[workspace]

[lib]
crate-type = ["staticlib"]

[features]
sgx-sim = [
    "mc-attest-verifier/sgx-sim"
]
ias-dev = [
    "mc-attest-verifier/ias-dev"
]

[dependencies]
# omb
mc-bomb-enclave-api = { path = "../api" }
mc-bomb-enclave-edl = { path = "../edl" }
mc-bomb-enclave-impl = { path = "../impl" }

# mobilecoin
mc-attest-core = { path = "../../mobilecoin/attest/core", default-features = false }
mc-attest-trusted = { path = "../../mobilecoin/attest/trusted" }
mc-attest-verifier = { path = "../../mobilecoin/attest/verifier", default-features = false }
mc-crypto-keys = { path = "../../mobilecoin/crypto/keys" }
mc-crypto-rand = { path = "../../mobilecoin/crypto/rand" }
mc-enclave-boundary = { path = "../../mobilecoin/enclave-boundary" }
mc-fog-ocall-oram-storage-edl = { path = "../../mobilecoin/fog/ocall_oram_storage/edl" }
mc-fog-ocall-oram-storage-trusted = { path = "../../mobilecoin/fog/ocall_oram_storage/trusted" }
mc-sgx-compat = { path = "../../mobilecoin/sgx/compat", features = ["sgx"] }
mc-sgx-compat-edl = { path = "../../mobilecoin/sgx/compat-edl" }
mc-sgx-debug-edl = { path = "../../mobilecoin/sgx/debug-edl" }
mc-sgx-enclave-id = { path = "../../mobilecoin/sgx/enclave-id" }
mc-sgx-panic-edl = { path = "../../mobilecoin/sgx/panic-edl" }
mc-sgx-report-cache-api = { path = "../../mobilecoin/sgx/report-cache/api" }
mc-sgx-slog = { path = "../../mobilecoin/sgx/slog", features = ["sgx"] }
mc-sgx-slog-edl = { path = "../../mobilecoin/sgx/slog-edl" }
mc-sgx-types = { path = "../../mobilecoin/sgx/types" }
mc-util-serial = { path = "../../mobilecoin/util/serial", default-features = false }

# third-party
lazy_static = { version = "1.4", features = ["spin_no_std"] }
mbedtls = { version = "0.8.1", default-features = false, features = ["no_std_deps", "aesni", "force_aesni_support", "rdrand"] }
mbedtls-sys-auto = { version = "2.26.1", default-features = false, features = ["custom_threading"] }
sha2 = { version = "0.10", default-features = false }

[build-dependencies]
mc-util-build-script = { path = "../../mobilecoin/util/build/script" }
mc-util-build-sgx = { path = "../../mobilecoin/util/build/sgx" }

cargo-emit = "0.2"
pkg-config = "0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
rpath = false
lto = true
debug-assertions = false
overflow-checks = false

[patch.crates-io]
# Fork and rename to use "OG" dalek-cryptography with latest dependencies.
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "65f8af4ca0bc1cb2fd2148c3259a0a76b155ff3e" }

# Patched to disable the cpuid instruction because that is incompatible with our sgx builds.
cpufeatures = { git = "https://github.com/mobilecoinfoundation/RustCrypto-utils.git", rev = "7c1804bf4f95ef84a7a53be93552ddf1708135bb" }

# Fix issues with recent nightlies, bump curve25519-dalek version
curve25519-dalek = { git = "https://github.com/mobilecoinfoundation/curve25519-dalek.git", rev = "8791722e0273762552c9a056eaccb7df6baf44d7" }
ed25519-dalek = { git = "https://github.com/mobilecoinfoundation/ed25519-dalek.git", rev = "4194e36abc75722e6fba7d552e719448fc38c51f" }

# Our patches for newer bindgen, no-std
mbedtls = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "98d3af413c1e23ea89cc5f41ab4dddb1944405af" }
mbedtls-sys-auto = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "98d3af413c1e23ea89cc5f41ab4dddb1944405af" }

# Fork and rename to use "OG" dalek-cryptography.
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "5c98ae068ee4652d6df6463b549fbf2d5d132faa" }

# Fixes the following:
# * Allow enabling `serde/std` without also requiring `serde_cbor/std` to be enabled.
#   See: https://github.com/pyfisch/cbor/pull/198
serde_cbor = { git = "https://github.com/mobilecoinofficial/cbor", rev = "4c886a7c1d523aae1ec4aa7386f402cb2f4341b5" }

# Fix issues with recent nightlies, bump curve25519-dalek version
x25519-dalek = { git = "https://github.com/mobilecoinfoundation/x25519-dalek.git", rev = "c1966b8743d320cd07a54191475e5c0f94b2ea30" }
